--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 body {
-  background-color: whitesmoke;
+  background-color: black;
   text-align: center;
 }
 
 img {
-  max-width: 100%;
+  max-width: 100;
 
 }
