--- a/Project1/css/main.css
+++ b/Project1/css/main.css
@@ -63,7 +63,7 @@ font-family: 'Gochi Hand', cursive;
 .part10{
   color: #743a74;
   background-color:	#cccccc;
-font-family: 'Be Vietnam', sans-serif;
+font-family: 'Chango', cursive;
 }
 
 .part11{
@@ -144,7 +144,7 @@ font-family: 'Seymour One', sans-serif;
 
   color: #743a74;
 
-font-family: 'Be Vietnam', sans-serif;
+font-family: 'Chango', cursive;
 }
 #text11{
   color: white;
