--- a/Exercise12/BookCover2/css/main.css
+++ b/Exercise12/BookCover2/css/main.css
@@ -1,12 +1,18 @@
 body{
-  background-color: black;
+
 }
-h1{
+#container{
+
+}
+text{
 font-family: poynter-oldstyle-text, serif;
-font-weight: 400;
+font-weight: 200;
 font-style: italic;
 text-align: center;
 color:gray;
 font-size: 100px;
-width:
+text-transform: capitalize;
+}
+path {
+  fill: transparent;
 }
