--- a/Exercise12/BookCover1/css/main.css
+++ b/Exercise12/BookCover1/css/main.css
@@ -1,14 +1,59 @@
 
-
-
-
 .container{
-  background: url(BackgroundImage/BackgroundImage.png) no-repeat center center ;
+  background-image: url("../Cover.png");
+  background-repeat: no-repeat, repeat;
+  background-color: #cccccc;
+  width:1000px;
+  height: 2000px;
+  margin: auto;
+}
+img{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  display: block;
+}
 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-width: 100%;
-height: 400px;
+h1{
+
+    position: relative;
+bottom: 2000px;
+left: 50px;
+font-family: fairy-tale-jf, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 90px;
+ line-height: 70%;
+}
+
+h2{
+  color: white;
+  font-family: fairy-tale-jf, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 200px;
+  text-align: center;
+  position: relative;
+bottom: 1400px;
+line-height: 90%;
+}
+
+h3{
+  color: white;
+  font-family: garamond-premier-pro, serif;
+  font-size: 35px;
+  position: relative;
+  bottom: 1400px;
+    text-align: right;
+    right:10px;
+}
+
+p{
+  color: white;
+  font-family: garamond-premier-pro, serif;
+  font-size: 25px;
+  position: relative;
+  margin-right: 100px;
+  margin-left: 100px;
+  bottom: 1350px;
 }
