--- a/Exercise12/BookCover5/css/main.css
+++ b/Exercise12/BookCover5/css/main.css
@@ -1,11 +1,15 @@
 body{
 background-color: #3d3d3d;
+
 }
 #container{
-  width: 1100px;
-  height: 2000px;
-  margin: auto;
+width: 1100px;
+height: 2000px;
+margin: auto;
+
 }
+
+
 .top{
   width: 1100px;
   float: left;
@@ -13,37 +17,34 @@ background-color: #3d3d3d;
   height: 300px;
   margin:0;
 }
-
-.pumpkin{
-width: 1100px;
-  background-color: black;
-  float: left;
-}
-.scary{
-width: 1100px;
-  background-color: black;
-  float: left;
-
-}
 .bottom{
   float: left;
   width: 1100px;
-  height: 1200px;
+  height: 1000px;
   background-color: black;
 
   margin:0;
 }
-h1{
-font-family: poynter-oldstyle-text, serif;
-font-weight: 200;
-font-style: italic;
-text-align: center;
-color:gray;
-font-size: 100px;
-text-transform: capitalize;
-position: relative;
-top: 100px;
+.sleepyhollow{
+background-color: black;
+float: left;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+}
+h1{
+  color: white;
+  font-family: garamond-premier-pro, serif;
+  font-weight: 600;
+  font-style: normal;
+  text-align: center;
+  font-size: 60px;
+    position: relative;
+  top: 160px;
+}
+
 h2{
   color: white;
   font-family: garamond-premier-pro, serif;
@@ -55,22 +56,12 @@ h2{
     top: 170px;
 }
 
-img{
-  width: 70%;
-  height: 70%;
-  margin: auto;
-  display: block;
-   padding-left: 150px;
-   padding-top: 100px;
-
-}
-
 p{
   color: white;
   font-family: garamond-premier-pro, serif;
-  font-size: 35px;
+  font-size: 25px;
   position: relative;
   margin-right: 100px;
   margin-left: 100px;
-	top: 200px;
+	top: 220px;
 }
