--- a/Project4/css/main.css
+++ b/Project4/css/main.css
@@ -3,16 +3,7 @@ body{
 margin: 0px;
 
 }
+
 img{
-  /* Full height */
- height: 100%;
-
- /* Center and scale the image nicely */
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
-
-
-   background-attachment: fixed;
-
+  float:left;
 }
